Adiciona campo confirmar senha no cadastro

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ $RECYCLE.BIN/
 *.lnk
 /target/
 target/classes/application.properties
+target/classes/META-INF/MANIFEST.MF
+target/classes/META-INF/maven/com.ufc.web.gyj/gyj/pom.properties
