--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-/target/
-target/classes/application.properties
-target/classes/META-INF/MANIFEST.MF
-target/classes/META-INF/maven/com.ufc.web.gyj/gyj/pom.properties
+/target/**
 src/main/resources/application.properties
